Players Endpoint. serializers and a few other things (#82)
* Players Endpoint. serializers and a few other things

* added pokemon nickname + player in game name

* add in game name to players table
