# app/models/tournament/player.rb
@@ -12,12 +12,17 @@ module Tournament
     has_many :phase_players, class_name: 'Tournament::PhasePlayer', dependent: :destroy, inverse_of: :player
     has_many :phases, through: :phase_players, source: :phase, source_type: 'Phase::BasePhase'
 
+    validates :in_game_name, presence: true
     has_many :pokemon_sets, dependent: :destroy, class_name: 'Tournament::PokemonSet', inverse_of: :player
-    accepts_nested_attributes_for :pokemon_sets
-
     validate :pokemon_sets_count_within_limit
 
+    # accepts_nested_attributes_for :pokemon_sets
+
     delegate :username, to: :user
+
+    def checked_in?
+      checked_in_at.present?
+    end
 
     def add_pokemon_sets!(pokemon_sets = [])
       pokemon_sets.each { |pokemon_set| add_pokemon_set!(pokemon_set, skip_save: true) }
